Your commit message

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -3,9 +3,9 @@ import ExampleMincomps from '../images/mincomps-example.png';
 ---
 
 
-<div id="controls-carousel" class="relative w-full" data-carousel="static">
+<div id="controls-carousel" class="relative w-full h-full" data-carousel="static">
     <!-- Carousel wrapper -->
-    <div class="relative h-56 overflow-hidden rounded-lg md:h-96 ">
+    <div class="relative overflow-hidden rounded-lg md:h-full ">
          <!-- Item 1 -->
          <div class="hidden duration-700 ease-in-out group" data-carousel-item="active">
             <img src={ExampleMincomps.src} class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in" alt="...">
