--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 	</head>
 
 	<body class="lg:h-screen lg:w-screen flex justify-center items-center">
-			<div class="h-5/6 max-w-6xl gap-6 flex flex-col lg:grid lg:grid-rows-3 lg:grid-cols-3">
+			<div class="h-5/6 max-w-screen-2xl gap-6 flex flex-col lg:grid lg:grid-rows-3 lg:grid-cols-3">
 				<slot/>
 			</div>
 		<script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
