--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -12,7 +12,7 @@ import Carousel from "./Carousel.astro"
             These are my highlighted projects, but you can find more in my Upwork profile :)
          </p>
       </div>
-      <div class="flex">
+    <div class="flex flex-col h-full justify-end"> 
          <Carousel></Carousel>
        </div>
     </div>
@@ -31,8 +31,6 @@ import Carousel from "./Carousel.astro"
         grid-row-end: 4;
         grid-column-start: 3;
         grid-column-end: 3;
-        align-items: top;
-        justify-content: flex-start;
         overflow: hidden;
         border-radius: 35px;
         border: 2px solid #6100FF;
