Your commit message

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -3,12 +3,12 @@ import ExampleMincomps from '../images/mincomps-example.png';
 ---
 
 
-<div id="controls-carousel" class="relative w-full h-full" data-carousel="static">
+<div id="controls-carousel" class=" w-full h-full" data-carousel="static">
     <!-- Carousel wrapper -->
-    <div class="relative overflow-hidden rounded-lg md:h-full ">
+    <div class=" overflow-hidden rounded-lg h-full">
          <!-- Item 1 -->
-         <div class="hidden duration-700 ease-in-out group" data-carousel-item="active">
-            <img src={ExampleMincomps.src} class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in" alt="...">
+         <div class="hidden duration-700 ease-in-out group" data-carousel-item="active"> 
+            <img src={ExampleMincomps.src} class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in h-full" alt="...">
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 ease-in">
                 <a href="https://github.com/zoroskr/mincomps" target="_blank">
                     <h5 class="text-pink-500 text-shadow-md text-xl font-bold leading-normal pb-2">Mincomps</h5>
@@ -17,7 +17,7 @@ import ExampleMincomps from '../images/mincomps-example.png';
             </div>
         </div>
         <div class="hidden duration-700 ease-in-out group" data-carousel-item="active">
-            <img src={ExampleMincomps.src} class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in" alt="...">
+            <img src={ExampleMincomps.src} class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in h-full" alt="...">
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 ease-in">
                 <a href="https://github.com/zoroskr/mincomps" target="_blank">
                     <h5 class="text-pink-500 text-shadow-md text-xl font-bold leading-normal pb-2">Mincomps</h5>
