--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -12,7 +12,7 @@ import Carousel from "./Carousel.astro"
             These are my highlighted projects, but you can find more in my Upwork profile :)
          </p>
       </div>
-    <div class="flex flex-col h-full justify-end"> 
+    <div class="h-full overflow-hidden relative"> 
          <Carousel></Carousel>
        </div>
     </div>
