--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,17 +4,29 @@ interface Props {
 }
 
 const { title } = Astro.props;
+
+import ImageIcon from '../images/icons/icon-web.svg'
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>Felipe Fidalgo - Front End Developer</title>
+		<meta name="title" content="Felipe Fidalgo - Front End Developer" />
+		<meta name="description" content="This is my personal portfolio, I hope you like it :) " />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://zoroskr.github.io/portfolio" />
+		<meta property="og:title" content="Felipe Fidalgo - Front End Developer" />
+		<meta property="og:description" content="This is my personal portfolio, I hope you like it :) " />
+		<meta property="og:image" content={ImageIcon.src}  />
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://zoroskr.github.io/portfolio/" />
+		<meta property="twitter:title" content="Felipe Fidalgo - Front End Developer" />
+		<meta property="twitter:description" content="This is my personal portfolio, I hope you like it :) " />
+		<meta property="twitter:image" content={ImageIcon.src}  />
+		<link rel="icon" href={ImageIcon.src} />
 	</head>
 
 	<body class="lg:h-screen lg:w-screen flex justify-center items-center">
