agregue wodensec y resolvi el porblema del carrousel en mobile

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,5 +1,6 @@
 ---
 import ExampleMincomps from '../images/mincomps-example.png';
+import ExampleWodensec from '../images/wodensec.png';
 ---
 
 
@@ -7,8 +8,8 @@ import ExampleMincomps from '../images/mincomps-example.png';
     <!-- Carousel wrapper -->
     <div class=" overflow-hidden rounded-lg h-full">
          <!-- Item 1 -->
-         <div class="hidden duration-700 ease-in-out group" data-carousel-item="active"> 
-            <img src={ExampleMincomps.src} class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in h-full" alt="...">
+         <div class="hidden duration-700 ease-in-out group overflow-hidden" data-carousel-item="active"> 
+            <img src={ExampleMincomps.src} class="min-w-xl w-full absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in h-full" alt="...">
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 ease-in">
                 <a href="https://github.com/zoroskr/mincomps" target="_blank">
                     <h5 class="text-pink-500 text-shadow-md text-xl font-bold leading-normal pb-2">Mincomps</h5>
@@ -16,12 +17,12 @@ import ExampleMincomps from '../images/mincomps-example.png';
                 </a>
             </div>
         </div>
-        <div class="hidden duration-700 ease-in-out group" data-carousel-item="active">
-            <img src={ExampleMincomps.src} class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in h-full" alt="...">
+        <div class="hidden duration-700 ease-in-out group overflow-hidden" data-carousel-item="active">
+            <img src={ExampleWodensec.src} class="min-w-xl w-full absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-hover:opacity-20 transition-opacity duration-300 ease-in h-full" alt="...">
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 ease-in">
-                <a href="https://github.com/zoroskr/mincomps" target="_blank">
-                    <h5 class="text-pink-500 text-shadow-md text-xl font-bold leading-normal pb-2">Mincomps</h5>
-                    <p class="text-white text-sm font-semibold leading-normal">Mincomps is a design system, this website is in charge of collecting different components and modifying them to give them a minimalist approach.</p>
+                <a href="https://www.wodensec.com/" target="_blank">
+                    <h5 class="text-pink-500 text-shadow-md text-xl font-bold leading-normal pb-2">Wodensec</h5>
+                    <p class="text-white text-sm font-semibold leading-normal">Work on this project to fix and make some modifications. Add new sections, modify animations, fix bugs and change styles. All modifications were done in a github repository, which allowed my client to keep track of all changes.</p>
                 </a>
             </div>
         </div>
@@ -44,5 +45,4 @@ import ExampleMincomps from '../images/mincomps-example.png';
         </span>
     </button>
 </div>
-
 
